# mockinbird

./: .gitignore  CMakeLists.txt  conda.pkgs  setup.py
mockinbird/plots/: makeCenterBothEnds_bs.py  makeNucleotideProbabilities.py
mockinbird/scripts/: bam2mb_regions.py  bam2mockinbird.py  bam2mockinbird_slow.py  calculate_posterior.py  iclipbam2arrow.py  iclipbam2mockinbird.py  learn_model.py  mockbam2statistics.py  mockinbird.py  mockinbird2table.py  mockinbird_entry.py  pcbam2regions.py  pcbam2regions_slow.py  preprocess.py  xxmotif.py
mockinbird/utils/: __init__.py  argparse_helper.py  config_validation.py  cy_helpers.pyx  fit_betabinom.py  grenander.py  parsers.py
mockinbird/utils/cmd_tools/: check_config.py  create_metamock.py  subsample_bam.py
mockinbird/utils/preprocess_modules/: __init__.py  bs_predictors.py  mappers.py  misc_modules.py  mock_modules.py
src/: iclipbam2mockinbird.cpp  mockinbird_data.h  pcbam2mockinbird.cpp  pcbam2regions.cpp
